<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="@dimen/_12sdp"
    android:background="@drawable/footballnow_bggraystrokewbg1"
    android:padding="16dp">

    <!-- Competitions Horizontal RecyclerView -->
    <TextView
        android:id="@+id/leaguee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/league"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCompetitions"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/leaguee"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="16dp" />


    <TextView
        android:id="@+id/leaguee1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/league_standings"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvCompetitions" />

    <!-- Standings Header -->
    <LinearLayout
        android:id="@+id/scoresss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/leaguee1"
        android:background="@color/transparent"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="#"
            android:textColor="@color/green_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/team"
            android:textColor="@color/green_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/p"
            android:textColor="@color/green_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/w"
            android:textColor="@color/green_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/l"
            android:textColor="@color/green_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textColor="@color/green_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="GD"
            android:textColor="@color/green_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/pts"
            android:textColor="@color/green_color"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>

    <!-- Standings Vertical RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStandings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoresss" />

</androidx.constraintlayout.widget.ConstraintLayout>