<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normal_bg"
    tools:context=".activities.onboarding.LanguageActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/arrow_back"
        android:padding="@dimen/_5sdp"
        android:id="@+id/btn_back"
         app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_15sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDone"
         android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/button_gradient_bg2"
        android:text="@string/done"
        app:cornerRadius="@dimen/_8sdp"
        android:gravity="center"
        android:textSize="@dimen/_10ssp"
        android:paddingHorizontal="0dp"
        android:includeFontPadding="false"
         android:textColor="@color/black"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_chooseLanguage"
        style="@style/normal_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/chooseLanguage"
        android:textSize="@dimen/_16sdp"
        app:fontFamily="@font/urbanist_semibold"
        app:layout_constraintEnd_toEndOf="@+id/btnDone"
        app:layout_constraintStart_toStartOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_chooseLanguageDesc"
        style="@style/normal_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/chooseLanguageDesc"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        app:fontFamily="@font/urbanist_medium"
        app:layout_constraintEnd_toEndOf="@id/btnDone"
        app:layout_constraintStart_toStartOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/tv_chooseLanguage" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginVertical="@dimen/_5sdp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/rv_language"
         tools:listitem="@layout/item_language"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="@id/btnDone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_chooseLanguageDesc"/>
</androidx.constraintlayout.widget.ConstraintLayout>